color de Layouts
agregando menu para cambiar el color de las notas antes de ser guardadas.

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
+    <!-- estos son los colores para realizar el degradado de la barra lateral ()-->
+
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
+        android:centerColor="#336964"
         android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:startColor="#4d5655"
         android:type="linear" />
 </shape>
